Add comments and refactor transfer generation.